Version 4.2.0

* Changed a Pegasus variant in a MagicLib bounty
* Externalized most Strings within the mod code which should help with any translation efforts
  - A lot of code refactors and adjustments, as a result.
* Ring types "rings_ice", "rings_dust", and "rings_special" now require a '0' appended to them
  - Now "rings_ice0", "rings_dust0", and "rings_special0"
* Fixed the Blueprint Stealing delay using the Dynamic Doctrine's delay setting instead if LunaLib is not enabled.



Version 4.1.0

* Revamped MagicLib bounties with 0.96 additions:
  - Changed all bounties with different ships and variants, some of which use the new 0.96 ships and weapons.
  - Phase bounty is now an Independent bounty; removed the Smuggler bounty as a result.
  - Added a Sindrian Diktat bounty, using the new Lion's Guard ships.
  - Increased credit rewards for most bounties
* Readjusted most of the Adversary's possible doctrines, including changing priority weapons and fighters.
* Some code refactors, mostly to account for LunaLib changes



Version 4.0.0

* Updated to Starsector 0.96a-RC6
  - HOWEVER, no promises that it will work perfectly if/when integrated mods (e.g. LunaLib) also update as well.
  - Further updates/fixes will come later...
* Upgraded the Adversary faction with the latest tech (however, no fancy SD tech)
  - They also remembered to actually get Dominator blueprints too.