@@ -373,7 +373,7 @@
         },
         "fleet_composition_faction":"adversary",
         "fleet_composition_quality":2,
-        "fleet_transponder":false,
+        "fleet_transponder":true,
         "fleet_no_retreat":true,
         "fleet_behavior":"PASSIVE",
 
@@ -395,7 +395,7 @@
         "job_type":"assassination",
         "job_show_fleet":"flagship",
         "job_show_distance":"vanilla",
-        "job_difficultyDescription":"",
+        "job_difficultyDescription":"none",
 
         "target_gender":"ANY",
         "target_rank":"spaceCommander",
@@ -499,10 +499,141 @@
         "fleet_composition_faction":"lions_guard",
         "fleet_composition_quality":2,
         "fleet_transponder":false,
-        "fleet_no_retreat":false,
+        "fleet_no_retreat":true,
         "fleet_behavior":"ROAMING",
 
         "location_distance":"CLOSE",
+        "location_themes":["theme_ruins","procgen_no_theme","procgen_no_theme_pulsar_blackhole"],
+        "location_themes_blacklist":["theme_already_occupied","theme_already_colonized","theme_hidden","no_pulsar_blackhole"],
+    },
+    "adversary_Kite_Swarm":{
+        "trigger_marketFaction_any":["independent","hegemony"],
+        "trigger_player_minLevel":15,
+        "trigger_memKeys_all":{
+            "$adversary_sillyBountiesEnabled":true,
+        },
+
+        "job_name":"Overwhelming Power",
+        "job_description":"An independent concern has posted a bounty against a Hegemony admiral who, for whatever reason, became stranded in the fringes with an auxiliary fleet. Why an independent entity wants to get rid of a lost Hegemony officer is still unknown, but whoever posted the bounty has warned would-be bounty hunters to ==be extremely cautious== for whatever awaits them.",
+        "job_comm_reply":"\"Brace yourselves, independent fleet! You are about to witness a lightshow!\"",
+        "job_intel_success":"Ok, that was something to behold, alright. At least you got some credits out of this \"lightshow\" display.",
+        "job_forFaction":"hegemony",
+        "job_deadline":365,
+        "job_credit_reward":2000000,
+        "job_type":"obliteration",
+        "job_show_fleet":"flagship",
+        "job_show_distance":"exact",
+        "job_difficultyDescription":"none",
+
+        "target_gender":"ANY",
+        "target_rank":"spaceCommander",
+        "target_post":"fleetCommander",
+        "target_personality":"steady",
+        "target_skills":{
+            "tactical_drills":1,
+            "coordinated_maneuvers":1,
+            "wolfpack_tactics":1,
+            "crew_training":1,
+            "best_of_the_best":1,
+            "support_doctrine":1,
+            "force_concentration":1,
+            #
+            "navigation":1,
+            "sensors":1,
+            "electronic_warfare":1,
+            "flux_regulation":1,
+            #
+            "bulk_transport":1,
+            "field_repairs":1,
+            "containment_procedures":1,
+            "derelict_contingent":1,
+        },
+
+        "fleet_name":"Hegemony Auxiliary Armada",
+        "fleet_faction":"ML_bounty",
+        "fleet_flagship_variant":"adversary_kite_hegemony_Strike",
+        "fleet_preset_ships":{
+            "adversary_kite_hegemony_Strike":239,
+        },
+        "fleet_composition_faction":"hegemony",
+        "fleet_composition_quality":2,
+        "fleet_transponder":false,
+        "fleet_no_retreat":true,
+        "fleet_behavior":"AGGRESSIVE",
+
+        "location_distance":"CLOSE",
+        "location_themes":["theme_ruins","procgen_no_theme","procgen_no_theme_pulsar_blackhole"],
+        "location_themes_blacklist":["theme_already_occupied","theme_already_colonized","theme_hidden","no_pulsar_blackhole"],
+    },
+    "adversary_Ziggurat_Plus":{
+        "trigger_marketFaction_any":["independent","hegemony"],
+        "trigger_player_minLevel":15,
+        "trigger_min_days_elapsed":1825,
+        "trigger_memKeys_all":{
+            "$adversary_sillyBountiesEnabled":true,
+            #"$defeatedZiggurat":true, # Doesn't work for whatever reason
+        },
+
+        "job_name":"The Alpha and Omega",
+        "job_description":"Rumors that Tri-Tachyon has produced yet another experimental Ziggurat-class hull has now been proven true by COMSEC. Now, you have been tasked to destroy this particular example once and for all.",
+        "job_comm_reply":"...",
+        "job_intel_success":"You have destroyed the replicated Ziggurat-class hull! Various Hegemony ministries have applauded your accomplishments and will feature you in their propaganda holodocs.",
+        "job_intel_failure":"You have made a grave mistake recovering the Ziggurat-class ship, and the Hegemony now relentlessly pursues your destruction.",
+        "job_forFaction":"hegemony",
+        "job_deadline":365,
+        "job_credit_reward":1500000,
+        "job_reputation_reward":100,
+        "job_type":"destruction",
+        "job_show_captain":false,
+        "job_show_fleet":"vanilla",
+        "job_show_distance":"exact",
+        "job_difficultyDescription":"auto",
+
+        "target_portrait":"zig_captain.png",
+        "target_gender":"ANY",
+        "target_rank":"spaceCommander",
+        "target_post":"fleetCommander",
+        "target_personality":"timid",
+        "target_skills":{
+            "helmsmanship":2,
+            "combat_endurance":2,
+            "impact_mitigation":2,
+            "damage_control":2,
+            "field_modulation":2,
+            "point_defense":2,
+            "target_analysis":2,
+            "systems_expertise":2,
+            "missile_specialization":2,
+            #
+            "tactical_drills":1,
+            "coordinated_maneuvers":1,
+            "crew_training":1,
+            "best_of_the_best":1,
+            "force_concentration":1,
+            #
+            "navigation":1,
+            "sensors":1,
+            "flux_regulation":1,
+            "phase_corps":1,
+            #
+            "field_repairs":1,
+            "ordnance_expert":2,
+            "polarized_armor":2,
+            "hull_restoration":1,
+            "derelict_contingent":1,
+        },
+
+        "fleet_name":"Unidentified Vessel",
+        "fleet_faction":"neutral",
+        "fleet_flagship_variant":"adversary_ziggurat_Experimental",
+        "fleet_flagship_name":"TTS Xenomorph",
+        "fleet_flagship_alwaysRecoverable":true,
+        "fleet_composition_quality":2,
+        "fleet_transponder":false,
+        "fleet_no_retreat":true,
+        "fleet_behavior":"AGGRESSIVE",
+
+        "location_distance":"FAR",
         "location_themes":["theme_ruins","procgen_no_theme","procgen_no_theme_pulsar_blackhole"],
         "location_themes_blacklist":["theme_already_occupied","theme_already_colonized","theme_hidden","no_pulsar_blackhole"],
     },
